<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SliderScreen">

    <ImageView
        android:id="@+id/imgSlider"
        android:layout_width="240dp"
        android:layout_height="140dp"
        android:layout_margin="6dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_margin="6dp"
        android:background="@drawable/round_button"
        android:text="@string/btnConsult" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_margin="6dp"
        android:background="@drawable/round_button"
        android:text="@string/btnLogin" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_margin="6dp"
        android:background="@drawable/round_button_white_blue"
        android:text="@string/btnRegistrar" />
</LinearLayout>