<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".Registro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblProf"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblProf"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtProf"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:hint="@string/htProf"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblMatricula"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblMatricula"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtMatricula"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/htMat"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:importantForAutofill="no"
                android:gravity="center"
                android:text="@string/lblNombre"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/htNombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblApellidos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblApellido"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/htApellidos"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblEmail"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:hint="@string/htEmail"
                android:inputType="textWebEmailAddress"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblContra"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblPwd"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtePwd"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTurno"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lblTurno"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_error"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spTurno"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="2"
                android:entries="@array/Turnos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/pBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/imgbtnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/regusr" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>